# md-dead-link-check

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  action.yaml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: github_action.yml  mac.yml  precommit.yml  ubuntu.yml  validation.yml  win.yml
md_dead_link_check/: __main__.py  config.py  helpers.py  link_checker.py  preprocess.py
src/md_dead_link_check/: __main__.py  helpers.py  link_checker.py  preprocess.py
tests/: test_link_cheker.py  test_preprocess.py
tests/test_md_files/: a.md  b.md  fail.md
tests/test_md_files/d/: a.md
